progs = [ 
  'annotations',
  'automatic_injection',
  'bind_non_owning_ptr',
  'bind_templates',
  'bind_to_constructor',
  'bindings',
  'configuration',
  'constructor_injection',
  'constructor_signature',
  'custom_policy',
  'custom_provider',
  'custom_scope',
  'deduce_scope',
  'dynamic_bindings',
  'eager_singletons',
  'example',
  'fwd_bindings',
  'is_creatable',
  'modules',
  'motivation',
  'multiple_bindings',
  'multiple_interfaces',
  'pool_provider',
  'scopes',
  'try_it',
  'polymorphism/concepts',
  'polymorphism/function',
  'polymorphism/inheritance',
  'polymorphism/templates',
  'polymorphism/type_erasure',
  'polymorphism/variant',
  'performance/create_bound_interface',
  'performance/create_bound_interface_via_exposed_module',
  'performance/create_bound_interface_via_module',
  'performance/create_named_type',
  'performance/create_type_with_bound_instance',
  'performance/create_type_without_bindings',
  'tutorial/basic_annotations_to_the_rescue',
  'tutorial/basic_create_objects_tree',
  'tutorial/basic_decide_the_life_times',
  'tutorial/basic_first_steps_with_bindings',
  'tutorial/basic_first_steps_with_bindings_override',
  'tutorial/basic_first_steps_with_dynamic_bindings',
  'tutorial/basic_first_steps_with_multiple_bindings',
  'tutorial/basic_first_steps_with_template_bindings',
  'tutorial/basic_split_your_configuration',
  'tutorial/basic_split_your_configuration_expose',
  'user_guide/annotated_constructor_injection',
  'user_guide/annotated_constructor_injection_with_constructor_definition',
  'user_guide/annotated_constructor_injection_with_ctor_traits',
  'user_guide/annotated_constructor_injection_with_the_same_names',
  'user_guide/bind_cross_platform',
  'user_guide/bind_deduce_type_to_value',
  'user_guide/bind_dynamic_bindings',
  'user_guide/bind_interface_to_implementation',
  'user_guide/bind_multiple_bindings',
  'user_guide/bind_multiple_bindings_initializer_list',
  'user_guide/bind_multiple_interfaces',
  'user_guide/bind_type_override',
  'user_guide/bind_type_to_compile_time_value',
  'user_guide/bind_type_to_value',
  'user_guide/constructor_injection_aggregate',
  'user_guide/constructor_injection_ambiguous_constructors_via_BOOST_DI_INJECT',
  'user_guide/constructor_injection_ambiguous_constructors_via_BOOST_DI_INJECT_TRAITS',
  'user_guide/constructor_injection_ambiguous_constructors_via_ctor_traits',
  'user_guide/constructor_injection_ambiguous_constructors_via_inject',
  'user_guide/constructor_injection_ambiguous_constructors_via_vaargs',
  'user_guide/constructor_injection_default_values',
  'user_guide/constructor_injection_direct',
  'user_guide/constructor_injection_long_parameter_list',
  'user_guide/constructor_injection_multiple_constructors',
  'user_guide/injector_empty',
  'user_guide/module',
  'user_guide/module_exposed_annotated_type',
  'user_guide/module_exposed_complex_types',
  'user_guide/module_exposed_many_types',
  'user_guide/module_exposed_type',
  'user_guide/policies_constructible_global',
  'user_guide/policies_constructible_local',
  'user_guide/policies_print_type_extended',
  'user_guide/policies_print_types',
  'user_guide/providers_heap_no_throw',
  'user_guide/providers_stack_over_heap',
  'user_guide/scopes_custom',
  'user_guide/scopes_deduce_default',
  'user_guide/scopes_instance',
  'user_guide/scopes_singleton',
  'user_guide/scopes_unique'
]
foreach p : progs
  exe = executable(p.underscorify(), p + '.cpp', 
                   dependencies : boost_di_dep,
                   include_directories : include_directories('..'))
  test(p.underscorify(), exe)
endforeach
