#
# Copyright (c) 2012-2015 Krzysztof Jusiak (krzysztof at jusiak dot net)
#
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
#
include_directories(${CMAKE_CURRENT_LIST_DIR}/common)
include_directories(${CMAKE_CURRENT_LIST_DIR})

function(run_test test)
    string(REPLACE "/" "_" tmp ${test})
    add_executable(test.${tmp} ${CMAKE_CURRENT_LIST_DIR}/${test}.cpp)
    add_test(test.${tmp} test.${tmp})
endfunction()

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -include test.hpp")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -include test.hpp")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /FI test.hpp")
endif()

run_test(ut/inject)
run_test(ut/aux_/preprocessor)
run_test(ut/aux_/type_traits)
run_test(ut/aux_/utility)
#run_test(ut/concepts/boundable)
#run_test(ut/concepts/callable)
#run_test(ut/concepts/configurable)
#run_test(ut/concepts/creatable)
#run_test(ut/concepts/providable)
#run_test(ut/concepts/scopable)
run_test(ut/core/any_type)
run_test(ut/core/binder)
run_test(ut/core/dependency)
run_test(ut/core/injector)
run_test(ut/core/policy)
run_test(ut/core/pool)
run_test(ut/core/provider)
run_test(ut/policies/constructible)
run_test(ut/providers/heap)
run_test(ut/providers/stack_over_heap)
run_test(ut/scopes/deduce)
run_test(ut/scopes/exposed)
run_test(ut/scopes/external)
run_test(ut/scopes/session)
run_test(ut/scopes/shared)
run_test(ut/scopes/singleton)
run_test(ut/scopes/unique)
run_test(ut/type_traits/ctor_traits)
run_test(ut/type_traits/scope_traits)
run_test(ut/type_traits/memory_traits)
run_test(ut/wrappers/unique)
run_test(ut/wrappers/shared)
run_test(ut/bindings)
run_test(ut/config)
run_test(ut/injector)
run_test(ut/make_injector)

run_test(ft/di_bind)
run_test(ft/di_config)
run_test(ft/di_config_global_policies)
run_test(ft/di_config_global_provider)
run_test(ft/di_inject)
run_test(ft/di_injector)
run_test(ft/di_modules)
run_test(ft/di_scope_exposed)
run_test(ft/di_scope_external)
run_test(ft/di_scope_session)
run_test(ft/di_scope_unique)
run_test(ft/di_wrapper_shared)

