#
# Copyright (c) 2012-2020 Kris Jusiak (kris at jusiak dot net)
#
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
#
function(test test)
    string(REPLACE "/" "_" tmp ${test})
    set(TEST_NAME test.${tmp})
    add_executable(${TEST_NAME} ${CMAKE_CURRENT_LIST_DIR}/${test}.cpp)
    target_include_directories(${TEST_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
    target_link_libraries(${TEST_NAME} PRIVATE Boost.DI)
    add_test(${TEST_NAME} ${TEST_NAME})
endfunction()

test(bindings/constructor_bindings)
test(bindings/contextual_bindings)
test(injections/extensible_injector)
test(injections/assisted_injection)
test(injections/factory)
test(injections/shared_factory)
test(injections/lazy)
test(injections/named_parameters)
test(injections/xml_injection)
test(policies/serialize)
test(policies/types_dumper)
test(policies/uml_dumper)
test(providers/heap)
test(providers/mocks_provider)
test(providers/runtime_provider)
test(providers/runtime_provider_additions)
test(scopes/scoped)
test(scopes/session)
test(scopes/shared)
test(injector)
