#
# Copyright (c) 2012-2015 Krzysztof Jusiak (krzysztof at jusiak dot net)
#
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
#
function(run_example example)
    string(REPLACE "/" "_" tmp ${example})
    add_executable(example.${tmp} ${CMAKE_CURRENT_LIST_DIR}/${example}.cpp)
    add_test(example.${tmp} example.${tmp})
endfunction()

include_directories("tutorial")

run_example(annotations)
run_example(bindings)
run_example(constructor_injection)
run_example(constructor_signature)
run_example(custom_policy)
run_example(custom_provider)
run_example(custom_scope)
run_example(deduce_scope)
run_example(dynamic_bindings)
run_example(hello_world)
run_example(modules)
run_example(multiple_interfaces)
run_example(pool_provider)
run_example(provider)

run_example(introduction/coffee_maker)

run_example(performance/create_bound_interface)
run_example(performance/create_bound_interface_via_exposed_module)
run_example(performance/create_bound_interface_via_module)
run_example(performance/create_named_type)
run_example(performance/create_type_with_bound_instance)
run_example(performance/create_type_without_bindings)

run_example(extensions/bindings/constructor_bindings)
run_example(extensions/bindings/multi_bindings)
run_example(extensions/injections/assisted_injection)
run_example(extensions/injections/xml_injection)
run_example(extensions/policies/types_dumper)
run_example(extensions/policies/uml_dumper)
run_example(extensions/providers/mocks_provider)
run_example(extensions/scopes/session_scope)
run_example(extensions/scopes/shared_scope)

run_example(quick_user_guide/annotations1)
run_example(quick_user_guide/annotations2)
run_example(quick_user_guide/annotations3)
run_example(quick_user_guide/annotations4)
run_example(quick_user_guide/bindings1)
run_example(quick_user_guide/bindings2)
run_example(quick_user_guide/bindings3)
run_example(quick_user_guide/bindings4)
run_example(quick_user_guide/injections1)
run_example(quick_user_guide/injections2)
run_example(quick_user_guide/injections3)
run_example(quick_user_guide/injections4)
run_example(quick_user_guide/injections5)
run_example(quick_user_guide/injections6)
run_example(quick_user_guide/injector1)
run_example(quick_user_guide/modules1)
run_example(quick_user_guide/modules2)
run_example(quick_user_guide/modules3)
run_example(quick_user_guide/modules4)
run_example(quick_user_guide/policies1)
run_example(quick_user_guide/policies2)
run_example(quick_user_guide/policies3)
run_example(quick_user_guide/providers1)
run_example(quick_user_guide/scopes1)
run_example(quick_user_guide/scopes2)
run_example(quick_user_guide/scopes3)
run_example(quick_user_guide/scopes4)
run_example(quick_user_guide/scopes5)

run_example(tutorial/tutorial1)
run_example(tutorial/tutorial2)
run_example(tutorial/tutorial3)
run_example(tutorial/tutorial4)
run_example(tutorial/tutorial5)
run_example(tutorial/tutorial6)
run_example(tutorial/tutorial7)

