#
# Copyright (c) 2012-2015 Krzysztof Jusiak (krzysztof at jusiak dot net)
#
# Distributed under the Boost Software License, Version 1.0.
# (See accompanying file LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
#
function(example example)
    string(REPLACE "/" "_" tmp ${example})
    add_executable(example.${tmp} ${CMAKE_CURRENT_LIST_DIR}/${example}.cpp)
    add_test(example.${tmp} example.${tmp})
endfunction()

include_directories("tutorial")

example(annotations)
example(bindings)
example(constructor_injection)
example(constructor_signature)
example(custom_policy)
example(custom_provider)
example(custom_scope)
example(deduce_scope)
example(dynamic_bindings)
example(fwd_bindings)
example(hello_world)
example(modules)
#example(multi_bindings)
example(multiple_interfaces)
example(pool_provider)
example(provider)

example(introduction/coffee_maker)

example(performance/create_bound_interface)
example(performance/create_bound_interface_via_exposed_module)
example(performance/create_bound_interface_via_module)
example(performance/create_named_type)
example(performance/create_type_with_bound_instance)
example(performance/create_type_without_bindings)

example(extensions/bindings/constructor_bindings)
example(extensions/injections/assisted_injection)
#example(extensions/injections/named_parameters)
example(extensions/injections/xml_injection)
example(extensions/policies/types_dumper)
example(extensions/policies/uml_dumper)
example(extensions/providers/mocks_provider)
example(extensions/scopes/session_scope)
example(extensions/scopes/shared_scope)

example(quick_user_guide/annotations1)
example(quick_user_guide/annotations2)
example(quick_user_guide/annotations3)
example(quick_user_guide/annotations4)
example(quick_user_guide/bindings1)
example(quick_user_guide/bindings2)
example(quick_user_guide/bindings3)
example(quick_user_guide/bindings4)
example(quick_user_guide/injections1)
example(quick_user_guide/injections2)
example(quick_user_guide/injections3)
example(quick_user_guide/injections4)
example(quick_user_guide/injections5)
example(quick_user_guide/injections6)
example(quick_user_guide/injector1)
example(quick_user_guide/modules1)
example(quick_user_guide/modules2)
example(quick_user_guide/modules3)
example(quick_user_guide/modules4)
example(quick_user_guide/policies1)
example(quick_user_guide/policies2)
example(quick_user_guide/policies3)
example(quick_user_guide/providers1)
example(quick_user_guide/scopes1)
example(quick_user_guide/scopes2)
example(quick_user_guide/scopes3)
example(quick_user_guide/scopes4)
example(quick_user_guide/scopes5)

example(tutorial/tutorial1)
example(tutorial/tutorial2)
example(tutorial/tutorial3)
example(tutorial/tutorial4)
example(tutorial/tutorial5)
example(tutorial/tutorial6)
example(tutorial/tutorial7)

